# LICIT

./: .env.example  .gitignore  docker-compose.yml  render.yaml  vercel.json
backend/: Dockerfile  Dockerfile.beat  Dockerfile.worker  alembic.ini  celerybeat-schedule  pyproject.toml  railway.json  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_onboarding_adn.py  003_analisis_anatomia.py  004_pago_status.py  005_comprobante_url.py  006_anexo_tecnico.py  007_anexo_respuestas.py
backend/app/: main.py
backend/app/api/: analisis.py  auth.py  expediente.py  licitaciones.py  pagos.py  vault.py  ws.py
backend/app/core/: auth.py  config.py  database.py  llm_client.py
backend/app/models/: __init__.py  analisis.py  company.py  expediente.py  licitacion.py  vault.py
backend/app/schemas/: analisis.py  company.py  expediente.py  licitacion.py
backend/app/services/: analisis_service.py  crawler.py  notificaciones.py  ocr.py  pdf_downloader.py
backend/app/workers/: celery_app.py  ingesta.py  pipeline.py
backend/scripts/: checklist_verificacion.py
backend/tests/: test_expediente_anexo.py  test_expediente_zip.py  test_notificaciones.py  test_pdf_downloader.py  test_radar.py
docs/superpowers/plans/: 2026-04-17-licit-ia-mvp.md  2026-04-18-acceso-inmediato-comprobante.md  2026-04-18-anatomia-matrices.md  2026-04-18-dashboard-radar-adn.md  2026-04-18-demo-ventas.md  2026-04-18-expediente-zip.md  2026-04-18-onboarding-adn.md  (+4 more)
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/src/: proxy.ts
(+50 files in other folders)
