[project]
name = "licit-ia-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "pgvector>=0.3.0",
  "pydantic-settings>=2.0.0",
  "celery[redis]>=5.4.0",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "openai>=1.30.0",
  "boto3>=1.34.0",
  "python-multipart>=0.0.9",
  "supabase>=2.4.0",
  "PyJWT>=2.8.0",
  "python-jose[cryptography]>=3.3.0",
  "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
